--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
 </head>
 <body>
     <header>
-        <div class="nav-bar">
-            <h1 class="main-nav">Bangladesh 2.0</h1>
-            <button class="nav-btn">Sign In</button>
+        <div class="container">
+            <div class="nav-bar">
+                <div class="logos">
+                    <h1 class="logo">Bangladesh 2.0</h1>
+                </div>
+                <div class="nav-btn">
+                    <button class="nav-signIn">Sign In</button>
+                </div>
+            </div>
+            <div class="header-banner">
+                <div class="banner-content">
+                    <h3 class="banner-title">Bangladesh 2.0</h3>
+                    <h1 class="banner-sub-title">Idea , innovation ,
+vision and challenges in New Bangladesh.</h1>
+                    <button class="banner-btn">Explore New Bangladesh</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./assets/hero.png" alt="">
+                </div>
+            </div>
         </div>
     </header>
 </body>
