added a main section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,34 @@ vision and challenges in New Bangladesh.</h1>
                 </div>
             </div>
         </div>
-    </header>
+    </header><main>
+        <section class="container">
+            <div>
+                <h1 class="pillar-head">Pillars of "Bangladesh 2.0"</h1>
+            </div>
+            <div class="pillars">
+                <div class="pillar-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="pillar-title">Innovation</h4>
+                    <p class="pillar-sub-title">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="pillar-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="pillar-title">Sustainability</h4>
+                    <p class="pillar-sub-title">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="pillar-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="pillar-title">Infrastructure</h4>
+                    <p class="pillar-sub-title">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="pillar-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="pillar-title">Empowerment</h4>
+                    <p class="pilla-subr-title">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
