--- a/index.html
+++ b/index.html
@@ -57,6 +57,38 @@ vision and challenges in New Bangladesh.</h1>
                 </div>
             </div>
         </section>
+                <section class="container">
+            <div class="section-content">
+                <h1 class="section-title">The Vision of Future</h1>
+                <p class="section-desc">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            </div>
+            <div class="vision-cards">
+                <!-- .vision-card>img.card-image+h4.vision-title+p.vision-desc -->
+                 <div class="vision-card1">
+                    <img src="./assets/card-icon.png" alt="" class="card-image">
+                    <h4 class="vision-title">Digital Transformation</h4>
+                    <p class="vision-desc">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <div class="vision-button">
+                        <button class="vision-btn1">Learn More</button>
+                    </div>
+                 </div>
+                 <div class="vision-card2">
+                    <img src="./assets/card-icon.png" alt="" class="card-image">
+                    <h4 class="vision-title">Green Energy</h4>
+                    <p class="vision-desc">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <div class="vision-button">
+                        <button class="vision-btn2">Learn More</button>
+                    </div>
+                 </div>
+                 <div class="vision-card3">
+                    <img src="./assets/card-icon.png" alt="" class="card-image">
+                    <h4 class="vision-title">Modern Infrastructure</h4>
+                   <p class="vision-desc">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                   <div class="vision-button">
+                        <button class="vision-btn3">Learn More</button>
+                   </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
