--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ vision and challenges in New Bangladesh.</h1>
                     <h4 class="vision-title">Digital Transformation</h4>
                     <p class="vision-desc">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
                     <div class="vision-button">
-                        <button class="vision-btn1">Learn More</button>
+                        <button class="vision-btn1 vision-btn">Learn More</button>
                     </div>
                  </div>
                  <div class="vision-card2">
@@ -77,7 +77,7 @@ vision and challenges in New Bangladesh.</h1>
                     <h4 class="vision-title">Green Energy</h4>
                     <p class="vision-desc">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                     <div class="vision-button">
-                        <button class="vision-btn2">Learn More</button>
+                        <button class="vision-btn2 vision-btn">Learn More</button>
                     </div>
                  </div>
                  <div class="vision-card3">
@@ -85,8 +85,15 @@ vision and challenges in New Bangladesh.</h1>
                     <h4 class="vision-title">Modern Infrastructure</h4>
                    <p class="vision-desc">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                    <div class="vision-button">
-                        <button class="vision-btn3">Learn More</button>
+                        <button class="vision-btn3 vision-btn">Learn More</button>
                    </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="BD-adviser">
+                <p class="adviser-desc">The current Chief Adviser of Bangladesh is Professor Muhammad Yunus. He assumed the role on August 8, 2024, following the resignation of the previous Prime Minister and the subsequent uprising. Professor Yunus was appointed by President Mohammed Shahabuddin as the Chief Adviser of the interim government. The interim government was formed after the resignation of Sheikh Hasina, the former Prime Minister, and a period of unrest. The primary goal of this interim government is to establish a consensus on fundamental reforms needed for a transparent election. </p>
+                <h3 class="adviser-name">Dr. Muhammad Yunus</h3>
+                <p class="adviser-position">Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
         </section>
     </main>
