added a main table section index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ vision and challenges in New Bangladesh.</h1>
                 </div>
             </div>
         </div>
-    </header><main>
+    </header>
+    <main>
         <section class="container">
             <div>
                 <h1 class="pillar-head">Pillars of "Bangladesh 2.0"</h1>
@@ -95,6 +96,53 @@ vision and challenges in New Bangladesh.</h1>
                 <h3 class="adviser-name">Dr. Muhammad Yunus</h3>
                 <p class="adviser-position">Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
+        </section>
+        <section class="container">
+            <div class="opinion-title">
+                <h4>Your Opinion Matters</h4>
+            </div>
+            <div class="opinion-data">
+                <table class="opinion-table">
+                    <div class="thead">
+                        <div class="thead1">Questions</div>
+                        <div class="thead2">Select Your Opinion</div>
+                    </div>
+                    <tbody>
+                        <tr>
+                            <td class="td">Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <td class="td-select">
+                                <select name="#" id="#">
+                                    <option class="select-option">Yes, I Agree</option>
+                                    <option class="select-option">No, I Disagree</option>
+                                    <option class="select-option">Neutral</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="td">Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <td class="td-select">
+                                <select name="#" id="#">
+                                    <option class="select-option">Yes, I Agree</option>
+                                    <option class="select-option">No, I Disagree</option>
+                                    <option class="select-option">Neutral</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="td">Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <td class="td-select">
+                                <select name="#" id="#">
+                                    <option class="select-option">Yes, I Agree</option>
+                                    <option class="select-option">No, I Disagree</option>
+                                    <option class="select-option">Neutral</option>
+                                </select>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <section class="donate">
         </section>
     </main>
 </body>
